update AuditChoiceScreen and AudditFormScreen

--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,15 @@ body{
     box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
     flex-direction: column;
   }
+
+  #actualBox {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    overflow-y: auto;
+    background-color: white;
+  }
   
   .blueBox {
     background-color: white;
